--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ node_modules/
 # 操作系统临时文件
 *.swp
 *.swo
+
+# Spark后端打包产物
+spark-backend/target/
+spark-backend/*.jar
+spark-backend/.idea/          # IDEA配置文件
+spark-backend/out/            # 编译输出目录
+spark-backend/*.iml           # IDEA模块文件
+spark-backend/logs/           # 运行日志
