--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "jade": "^1.11.0",
     "mysql": "^2.18.1"
