--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^2.2.0",
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.2",
     "jade": "^1.11.0",
     "mysql": "^2.18.1"
   }
